@@ -815,359 +815,3 @@ WasModified (Log *log)
 	} else
 		return FALSE;
 }
-
-/******************************************************************************/
-/* Unmaintained functions that may be deleted */
-/******************************************************************************/
-
-#ifdef FIXME
-
-#define LINES_P_PAGE             10
-#define NUM_PAGES                5 
-#define R_BUF_SIZE               1024	/* Size of read buffer */
-
-/* ----------------------------------------------------------------------
-   NAME:	UpdateLogStats
-   DESCRIPTION:	
-   ---------------------------------------------------------------------- */
-
-void
-UpdateLogStats( Log *log )
-{
-   gchar *buffer;
-   gchar **buffer_lines;
-   int i, thisyear, nl, newbytes;
-   time_t curdate, newdate;
-   DateMark *curmark;
-   struct tm *tmptm;
-   GnomeVFSFileSize filesize;
-   GnomeVFSFileSize read_bytes;
-   GnomeVFSResult result;
-
-   if (log == NULL)
-     return;
-
-   curmark = log->lstats.lastmark;
-   curdate = log->lstats.enddate;
-   tmptm = localtime (&curdate);
-   thisyear = tmptm->tm_year;
-
-   /* Count the new bytes that were added to the file since last time */
-   result = gnome_vfs_seek (log->handle, GNOME_VFS_SEEK_END, 0L);
-   filesize = gnome_vfs_tell (log->handle, &(filesize));
-   newbytes = filesize - curmark->offset;
-
-   /* Read these new bytes */
-   gnome_vfs_seek (log->handle, curmark->offset, GNOME_VFS_SEEK_START);   
-   buffer = g_malloc (newbytes);
-   result = gnome_vfs_read (log->handle, buffer, newbytes, &read_bytes);
-   buffer_lines = g_strsplit (buffer, "\n", -1);
-   
-   /* Go back to where we were */
-   gnome_vfs_seek (log->handle, log->filesize, 0L);
-
-   nl=0;
-   for (i=1; buffer_lines[i]!=NULL; i++) {
-	   nl++;
-	   newdate = GetDate (buffer_lines[i]);
-	   
-	   if (newdate < 0 || isSameDay (newdate, curdate) )
-		   continue;
-	   curmark->next = malloc (sizeof (DateMark));
-	   if (curmark->next == NULL) {
-		   ShowErrMessage (NULL, error_main, _("ReadLogStats: out of memory"));
-		   exit (0);
-	   }
-	   curmark->next->prev = curmark;
-	   curmark = curmark->next;
-	   curmark->time = newdate;
-	   if (newdate < curdate)	/* The newdate is next year */
-		   thisyear++;
-	   curmark->year = thisyear;
-	   curmark->next = NULL;
-	   curmark->offset = filesize;
-	   curdate = newdate;
-   }
-   
-   log->lstats.enddate = curdate;
-   log->lstats.lastmark = curmark;
-   log->lstats.numlines += nl;
-
-   g_strfreev (buffer_lines);
-   g_free (buffer);
-
-   return;
-}
-
-/* ----------------------------------------------------------------------
-   NAME:        ReadNPagesUp
-   DESCRIPTION: 
-   ---------------------------------------------------------------------- */
-
-int
-ReadNPagesUp (Log * lg, Page * pg, int n)
-{
-   Page *cp;
-   int i;
-
-   /* Go to place on file. */
-   fseek (lg->fp, pg->firstchpos, SEEK_SET);
-
-   cp = pg->prev;
-   /* Read n pages up.             */
-   for (i = 0; i < n; i++)
-   {
-      ReadPageUp (lg, cp);
-      lg->firstpg = cp;
-      lg->lastpg = lg->lastpg->prev;
-      if (cp->isfirstpage == TRUE)
-	 return i+1;
-      cp = cp->prev;
-   }
-
-   return n;
-}
-
-/* ----------------------------------------------------------------------
-   NAME:        ReadNPagesDown
-   DESCRIPTION: 
-   ---------------------------------------------------------------------- */
-
-int
-ReadNPagesDown (Log * lg, Page * pg, int n)
-{
-   Page *cp;
-   int i;
-
-   /* Go to place on file. */
-   fseek (lg->fp, pg->lastchpos, SEEK_SET);
-
-   cp = pg->next;
-   /* Read n pages down.   */
-   for (i = 0; i < n; i++)
-   {
-      ReadPageDown (lg, cp, FALSE /* exec_actions */);
-      lg->lastpg = cp;
-      lg->firstpg = lg->firstpg->next;
-      if (cp->islastpage == TRUE)
-	 return i+1;
-      cp = cp->next;
-   }
-
-   return n;
-}
-
-/* ----------------------------------------------------------------------
-   NAME:        ReadPageUp
-   DESCRIPTION: Reads a page from the log file.
-   ---------------------------------------------------------------------- */
-
-int
-ReadPageUp (Log * lg, Page * pg)
-{
-   LogLine *line;
-   FILE *fp;
-   char *c, buffer[R_BUF_SIZE + 1];
-   int ch;
-   int ln;
-   long int old_pos;
-
-   fp = lg->fp;
-   ln = LINES_P_PAGE - 1;
-
-   pg->lastchpos = ftell (fp);
-   pg->islastpage = FALSE;
-   pg->isfirstpage = FALSE;
-   pg->fl = 0;
-   pg->ll = LINES_P_PAGE - 1;
-
-   /* Tell if we are reading the last page */
-   ch = fgetc (fp);
-   if (ch == EOF)
-     pg->islastpage = TRUE;
-   ungetc (ch,fp);
-
-   while (ln >= pg->fl)
-   {
-      c = buffer;
-      if (fseek (fp, -1L, SEEK_CUR) < 0)
-      {
-	 pg->fl = ln;
-	 pg->isfirstpage = TRUE;
-	 break;
-      }
-      /* Go to end of previous line */
-      ch = fgetc (fp);
-      while (ch != '\n')
-      {
-	 if (fseek (fp, -2L, SEEK_CUR) < 0)
-	 {
-	    /*   ch = fgetc (fp); */
-	    pg->isfirstpage = TRUE;
-	    pg->fl = ln;
-	    break;
-	 }
-	 ch = fgetc (fp);
-      }
-      ungetc (ch, fp);
-
-      /* Read the line now. */
-      old_pos = ftell (fp);
-      if (pg->isfirstpage == FALSE)
-	 fseek (fp, 1L, SEEK_CUR);
-      fgets (buffer, R_BUF_SIZE, fp);
-
-      /* Put cursor back where it was. */
-      fseek (fp, old_pos, SEEK_SET);
-
-      line = &pg->line[ln];
-      ParseLine (buffer, line);
-      ln--;
-   }
-   pg->firstchpos = ftell (fp);
-
-   return pg->isfirstpage;
-}
-
-/* ----------------------------------------------------------------------
-   NAME:        ReadPageDown
-   DESCRIPTION: Reads new log lines 
-   ---------------------------------------------------------------------- */
-
-int
-ReadPageDown (Log *log, LogLine ***inp_mon_lines, gboolean exec_actions)
-{
-	gchar *buffer;
-	gint new_lines_read = 0;
-	FILE *fp;
-	LogLine *line;
-	LogLine **new_mon_lines = NULL;	 
-	GnomeVFSFileSize filesize;
-	GnomeVFSFileSize size_read;
-	GnomeVFSResult result;
-	
-	g_return_val_if_fail (log != NULL, FALSE);
-	
-	/* Count the new bytes that were added to the file since last time */
-	result = gnome_vfs_seek (log->handle, GNOME_VFS_SEEK_END, 0L);
-	filesize = gnome_vfs_tell (log->handle, &(filesize));
-	result = gnome_vfs_seek (log->handle, log->filesize, 0L);
-	
-	if ((filesize - log->filesize) > 0) {
-	
-		buffer = g_malloc (filesize - log->filesize);
-		result = gnome_vfs_read (log->handle, buffer, filesize - log->filesize, &size_read);
-		
-		if (size_read > 0) {
-			gchar **buffer_lines;
-			int i;
-			
-			buffer_lines = g_strsplit (buffer, "\n", -1);
-			for (i=0; buffer_lines[i] != NULL; i++) {
-				++new_lines_read;
-				new_mon_lines = realloc (new_mon_lines,
-							 sizeof(*(new_mon_lines)) * new_lines_read);
-				
-				if (!new_mon_lines) {
-					ShowErrMessage (NULL, error_main, "Unable to realloc for new_mon_lines\n");
-					return 0; 
-				}
-				
-				line = malloc (sizeof(**(new_mon_lines)));
-				if (!line) {
-					ShowErrMessage (NULL, error_main, "Unable to malloc for line\n");
-					return 0;
-				}
-				ParseLine (buffer, line);
-				new_mon_lines[new_lines_read - 1] = line;
-				
-				if (exec_actions)
-					exec_action_in_db (log, line, actions_db);
-			}
-			*inp_mon_lines = new_mon_lines;
-		} else new_lines_read = 0;
-	} else new_lines_read = 0;
-
-	return new_lines_read;
-}
-
-/* ----------------------------------------------------------------------
-   NAME:          MoveToMark
-   DESCRIPTION:   From the current mark read NUM_PAGES/2 pages ahead and
-                  NUM_PAGES/2 pages behind (if possible).
-   ---------------------------------------------------------------------- */
-
-void
-MoveToMark (Log *log)
-{
-  DateMark *mark;
-  FILE *fp;
-  Page *middlepg;
-  int pagesread, pagesdown, i;
-  
-  g_return_if_fail (log);
-  
-  mark = log->curmark;
-  g_return_if_fail (mark);
-  fp = log->fp;
-  
-  pagesdown = NUM_PAGES>>1;
-  
-  /* Read relative to middle page */
-  middlepg = log->lastpg;
-  for(i=0;i<pagesdown;i++)
-    middlepg = middlepg->prev;
-  
-  /* Move file pointer to the current offset 
-     into the file */
-  if (mark->offset > 1)
-    fseek(fp, mark->offset-1, SEEK_SET);
-  else
-    fseek(fp, mark->offset, SEEK_SET);
-  ReadPageDown(log, middlepg, FALSE /* exec_actions */);
-  if (middlepg->islastpage)
-    {
-      middlepg = log->lastpg;
-      if (mark->offset > 1)
-	fseek(fp, mark->offset-1, SEEK_SET);
-      else
-	fseek(fp, mark->offset, SEEK_SET);
-      ReadPageDown(log, middlepg, FALSE /* exec_actions */);
-      ReadNPagesUp(log, middlepg, NUM_PAGES-1);
-      log->currentpg = middlepg;
-      return;
-    }
-  
-  if (middlepg->isfirstpage)
-    {
-      middlepg = log->firstpg;
-      fseek(fp, mark->offset, SEEK_SET);
-      ReadPageDown(log, middlepg, FALSE /* exec_actions */);
-      ReadNPagesDown(log, middlepg, NUM_PAGES-1);
-      log->currentpg = middlepg;
-      return;
-    }
-  
-  pagesread = ReadNPagesDown (log, middlepg, NUM_PAGES-1);
-  ReadNPagesUp (log, middlepg, MAX (pagesdown, (NUM_PAGES-1-pagesread)));
-
-  log->currentpg = middlepg;
-   
-}
-
-/* ----------------------------------------------------------------------
-   NAME:	UpdateLastPage
-   DESCRIPTION:	Re-read the last log page.
-   ---------------------------------------------------------------------- */
-
-void
-UpdateLastPage (Log *log)
-{
-
-  /* Check that the last page is in the list. */
-  if (!log->lastpg->islastpage)
-    return;
-
-
-}
-#endif
