@@ -1,5 +1,8 @@
 2004-11-04  Vincent Noel  <vnoel@cox.net>
 
+	* logrtns.c: Remove the ifdef'ed functions, which have not been
+	compiled or used in 2 years.
+
 	* calendar.c: Remove a bunch of useless defines.
 
 	* logrtns.c (isLogFile): Use the GnomeVFSResult to check the file
